# ur5-hande-sim

./: .gitignore  .repos  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  package.xml  run_docker.sh  run_sim.sh  setup.sh
config/: kinematics.yaml  ur5_hande_controllers.yaml  ur5_hande_real_controllers.yaml
launch/: ur5_hande_gz.launch.py  ur5_hande_moveit.launch.py  ur5_hande_real.launch.py
patches/: 01-add-sim-gazebo-arg.patch
srdf/: ur5_hande.srdf.xacro
urdf/: ur5_hande.urdf.xacro  ur5_hande_real.urdf.xacro
