<?xml version="1.0"?>
<package format="3">
  <name>ur5_hande_bringup</name>
  <version>0.1.0</version>
  <description>Combined UR5 + Robotiq Hand-E description, controllers, MoveIt config, and Gazebo Harmonic launch for ROS 2 Jazzy.</description>
  <maintainer email="rayhaanhanslod6@gmail.com">ray</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>trac_ik_kinematics_plugin</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_controllers</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>ur_simulation_gz</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>ur_client_library</exec_depend>

  <exec_depend>robotiq_hande_description</exec_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>parallel_gripper_controller</exec_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
